--- a/src/index.css
+++ b/src/index.css
@@ -610,6 +610,15 @@ svg {
   margin: 20px 0;
 }
 
+.cart {
+  overflow-y: auto;
+}
+
+.checkout-order {
+  overflow-y: hidden;
+  min-height: 430px !important;
+}
+
 @media (max-width: 1150px) {
   * {
     overflow-x: hidden;
