--- a/src/index.scss
+++ b/src/index.scss
@@ -602,11 +602,11 @@ svg {
 
 
 .cart {
-  overflow-y: auto;
+  overflow-y: hidden !important;
 }
 
 .checkout-order {
-  overflow-y: hidden;
+  overflow-y: hidden !important;
   min-height: 430px !important;
 }
 
